<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="123dp"
        android:layout_height="110dp"
        android:layout_marginStart="224dp"
        android:layout_marginTop="40dp"
        android:contentDescription="GOT"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/film2" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="123dp"
        android:layout_height="110dp"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/film4" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="123dp"
        android:layout_height="110dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="281dp"
        android:contentDescription="TODO"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/film3" />


    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="440dp"
        android:layout_marginEnd="88dp"
        android:text="@string/button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="123dp"
        android:layout_height="110dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="40dp"
        android:contentDescription="Mando"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/film1"
        tools:srcCompat="@drawable/film1" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="216dp"
        android:text="@string/button_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="228dp"
        android:layout_marginTop="216dp"
        android:text="@string/button_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="440dp"
        android:text="@string/button_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="95dp"
        android:layout_height="33dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="165dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/film1"
        android:textColor="@color/purple_700"
        android:textColorHighlight="@color/teal_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="114dp"
        android:layout_height="37dp"
        android:layout_marginStart="227dp"
        android:layout_marginTop="164dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/film2"
        android:textColor="@color/purple_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="95dp"
        android:layout_height="33dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="400dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/film3"
        android:textColor="@color/purple_700"
        android:textColorHighlight="@color/teal_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:layout_marginStart="224dp"
        android:layout_marginTop="400dp"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/purple_700"
        android:text="@string/film4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="376dp"
        android:layout_height="60dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="37dp"
        android:text="TextView"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox1" />

    <CheckBox
        android:id="@+id/checkbox1"
        android:layout_width="203dp"
        android:layout_height="32dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="169dp"
        android:checked="true"
        android:clickable="false"
        android:contextClickable="false"
        android:enabled="false"
        android:inputType="none"
        android:linksClickable="false"
        android:longClickable="false"
        android:text="Мне понравилось"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <ImageView
        android:id="@+id/imageInviteFriend"
        android:layout_width="56dp"
        android:layout_height="74dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/ic_baseline_emoji_people_24" />

</androidx.constraintlayout.widget.ConstraintLayout>